fix mobile photo spacing

--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,7 @@ a:hover {
   font-size: 3rem;
   font-weight: 500;
   color: #fff;
+  margin-top: 3rem;
 
   -webkit-animation: fadein 1.5s;
      -moz-animation: fadein 1.5s;
